# microservices/items_service/docs/openapi.yaml
@@ -114,6 +114,22 @@ info:
     contact: {}
 openapi: 3.0.0
 paths:
+    /healthcheck:
+        get:
+            operationId: HealthCheck
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                properties:
+                                    status: {type: string}
+                                required:
+                                    - status
+                                type: object
+            security: []
+            parameters: []
     /api/v1/items:
         get:
             operationId: GetItems
